[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = { version = "0.16" }
serde = "1"
ic-crypto-internal-bls12-381-vetkd = { git = "https://github.com/dfinity/ic" }
ic-crypto-internal-bls12-381-type = { git = "https://github.com/dfinity/ic" }
rand = "0.8"
rand_chacha = "0.3"
lazy_static = "1.4"
hex = "0.4.3"
#[target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", features = ["custom"] }
ic-stable-structures = "0.6.7"

[dev-dependencies]
