[package]
name = "expo-starter-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-crypto-internal-basic-sig-rsa-pkcs1 = { git = "https://github.com/dfinity/ic.git" }
ic-crypto-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git" }

candid = "0.10"
ic-cdk = "0.16"

[dev-dependencies]
hex = "0.4.3"

# [target.'cfg(all(target_arch = "wasm32", target_vendor = "unknown", target_os = "unknown"))'.dependencies]
# getrandom = { version = "0.2", features = ["custom"] }
