[package]
name = "http_incoming_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.5"
ic-cdk = "0.13.1"
ic-stable-structures = "0.6.3"
serde = "1.0.193"
